// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag in Dark Theme renders Customization 1`] = `
Array [
  <div
    className="flex flex-wrap md:flex-nowrap items-center justify-around gap-2 w-full"
  >
    <textarea
      className="appearance-none resize-none w-full p-4 text-moon-16 bg-gohan rounded-moon-s-sm outline outline-1 outline-offset-[-1px] outline-beerus transition-all focus:outline-2 focus:outline-offset-[-2px] focus:outline-piccolo hover:outline-1 hover:outline-offset-[-1px] hover:outline-bulma/[0.12] text-krillin placeholder:text-whis"
      placeholder="Custom text colours"
      rows={1}
    />
    <textarea
      className="appearance-none resize-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks outline outline-1 outline-offset-[-1px] transition-all focus:outline-2 focus:outline-offset-[-2px] hover:outline-1 hover:outline-offset-[-1px] outline-chichi hover:outline-piccolo focus:outline-krillin"
      placeholder="Custom border colours"
      rows={1}
    />
    <textarea
      className="appearance-none resize-none w-full p-4 text-moon-16 text-bulma rounded-moon-s-sm placeholder:text-trunks outline outline-1 outline-offset-[-1px] outline-beerus transition-all focus:outline-2 focus:outline-offset-[-2px] focus:outline-piccolo hover:outline-1 hover:outline-offset-[-1px] hover:outline-bulma/[0.12] bg-roshi-10"
      placeholder="Custom background colour"
      rows={1}
    />
  </div>,
  <div
    className="flex flex-wrap md:flex-nowrap items-center justify-around gap-2 w-full"
  >
    <textarea
      className="appearance-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks outline outline-1 outline-offset-[-1px] outline-beerus transition-all focus:outline-2 focus:outline-offset-[-2px] focus:outline-piccolo hover:outline-1 hover:outline-offset-[-1px] hover:outline-bulma/[0.12] resize-y"
      placeholder="Resize vertically"
      rows={3}
    />
    <textarea
      className="appearance-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks outline outline-1 outline-offset-[-1px] outline-beerus transition-all focus:outline-2 focus:outline-offset-[-2px] focus:outline-piccolo hover:outline-1 hover:outline-offset-[-1px] hover:outline-bulma/[0.12] resize-x"
      placeholder="Resize horizontally"
      rows={3}
    />
    <textarea
      className="appearance-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks outline outline-1 outline-offset-[-1px] outline-beerus transition-all focus:outline-2 focus:outline-offset-[-2px] focus:outline-piccolo hover:outline-1 hover:outline-offset-[-1px] hover:outline-bulma/[0.12] resize"
      placeholder="Resize vertically and horizontally"
      rows={3}
    />
  </div>,
]
`;

exports[`Tag in Dark Theme renders Deafult 1`] = `
<textarea
  className="appearance-none resize-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks outline outline-1 outline-offset-[-1px] outline-beerus transition-all focus:outline-2 focus:outline-offset-[-2px] focus:outline-piccolo hover:outline-1 hover:outline-offset-[-1px] hover:outline-bulma/[0.12]"
/>
`;

exports[`Tag in Dark Theme renders Disabled 1`] = `
<textarea
  className="appearance-none resize-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks outline outline-1 outline-offset-[-1px] outline-beerus transition-all focus:outline-2 focus:outline-offset-[-2px] focus:outline-piccolo hover:outline-1 hover:outline-offset-[-1px] hover:outline-bulma/[0.12] opacity-30 cursor-not-allowed"
  disabled={true}
  placeholder="Disabled"
/>
`;

exports[`Tag in Light Theme renders Customization 1`] = `
Array [
  <div
    className="flex flex-wrap md:flex-nowrap items-center justify-around gap-2 w-full"
  >
    <textarea
      className="appearance-none resize-none w-full p-4 text-moon-16 bg-gohan rounded-moon-s-sm outline outline-1 outline-offset-[-1px] outline-beerus transition-all focus:outline-2 focus:outline-offset-[-2px] focus:outline-piccolo hover:outline-1 hover:outline-offset-[-1px] hover:outline-bulma/[0.12] text-krillin placeholder:text-whis"
      placeholder="Custom text colours"
      rows={1}
    />
    <textarea
      className="appearance-none resize-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks outline outline-1 outline-offset-[-1px] transition-all focus:outline-2 focus:outline-offset-[-2px] hover:outline-1 hover:outline-offset-[-1px] outline-chichi hover:outline-piccolo focus:outline-krillin"
      placeholder="Custom border colours"
      rows={1}
    />
    <textarea
      className="appearance-none resize-none w-full p-4 text-moon-16 text-bulma rounded-moon-s-sm placeholder:text-trunks outline outline-1 outline-offset-[-1px] outline-beerus transition-all focus:outline-2 focus:outline-offset-[-2px] focus:outline-piccolo hover:outline-1 hover:outline-offset-[-1px] hover:outline-bulma/[0.12] bg-roshi-10"
      placeholder="Custom background colour"
      rows={1}
    />
  </div>,
  <div
    className="flex flex-wrap md:flex-nowrap items-center justify-around gap-2 w-full"
  >
    <textarea
      className="appearance-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks outline outline-1 outline-offset-[-1px] outline-beerus transition-all focus:outline-2 focus:outline-offset-[-2px] focus:outline-piccolo hover:outline-1 hover:outline-offset-[-1px] hover:outline-bulma/[0.12] resize-y"
      placeholder="Resize vertically"
      rows={3}
    />
    <textarea
      className="appearance-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks outline outline-1 outline-offset-[-1px] outline-beerus transition-all focus:outline-2 focus:outline-offset-[-2px] focus:outline-piccolo hover:outline-1 hover:outline-offset-[-1px] hover:outline-bulma/[0.12] resize-x"
      placeholder="Resize horizontally"
      rows={3}
    />
    <textarea
      className="appearance-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks outline outline-1 outline-offset-[-1px] outline-beerus transition-all focus:outline-2 focus:outline-offset-[-2px] focus:outline-piccolo hover:outline-1 hover:outline-offset-[-1px] hover:outline-bulma/[0.12] resize"
      placeholder="Resize vertically and horizontally"
      rows={3}
    />
  </div>,
]
`;

exports[`Tag in Light Theme renders Deafult 1`] = `
<textarea
  className="appearance-none resize-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks outline outline-1 outline-offset-[-1px] outline-beerus transition-all focus:outline-2 focus:outline-offset-[-2px] focus:outline-piccolo hover:outline-1 hover:outline-offset-[-1px] hover:outline-bulma/[0.12]"
/>
`;

exports[`Tag in Light Theme renders Disabled 1`] = `
<textarea
  className="appearance-none resize-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks outline outline-1 outline-offset-[-1px] outline-beerus transition-all focus:outline-2 focus:outline-offset-[-2px] focus:outline-piccolo hover:outline-1 hover:outline-offset-[-1px] hover:outline-bulma/[0.12] opacity-30 cursor-not-allowed"
  disabled={true}
  placeholder="Disabled"
/>
`;

exports[`Tag in RTL renders Customization 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-wrap md:flex-nowrap items-center justify-around gap-2 w-full"
  >
    <textarea
      className="appearance-none resize-none w-full p-4 text-moon-16 bg-gohan rounded-moon-s-sm outline outline-1 outline-offset-[-1px] outline-beerus transition-all focus:outline-2 focus:outline-offset-[-2px] focus:outline-piccolo hover:outline-1 hover:outline-offset-[-1px] hover:outline-bulma/[0.12] text-krillin placeholder:text-whis"
      placeholder="Custom text colours"
      rows={1}
    />
    <textarea
      className="appearance-none resize-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks outline outline-1 outline-offset-[-1px] transition-all focus:outline-2 focus:outline-offset-[-2px] hover:outline-1 hover:outline-offset-[-1px] outline-chichi hover:outline-piccolo focus:outline-krillin"
      placeholder="Custom border colours"
      rows={1}
    />
    <textarea
      className="appearance-none resize-none w-full p-4 text-moon-16 text-bulma rounded-moon-s-sm placeholder:text-trunks outline outline-1 outline-offset-[-1px] outline-beerus transition-all focus:outline-2 focus:outline-offset-[-2px] focus:outline-piccolo hover:outline-1 hover:outline-offset-[-1px] hover:outline-bulma/[0.12] bg-roshi-10"
      placeholder="Custom background colour"
      rows={1}
    />
  </div>
  <div
    className="flex flex-wrap md:flex-nowrap items-center justify-around gap-2 w-full"
  >
    <textarea
      className="appearance-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks outline outline-1 outline-offset-[-1px] outline-beerus transition-all focus:outline-2 focus:outline-offset-[-2px] focus:outline-piccolo hover:outline-1 hover:outline-offset-[-1px] hover:outline-bulma/[0.12] resize-y"
      placeholder="Resize vertically"
      rows={3}
    />
    <textarea
      className="appearance-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks outline outline-1 outline-offset-[-1px] outline-beerus transition-all focus:outline-2 focus:outline-offset-[-2px] focus:outline-piccolo hover:outline-1 hover:outline-offset-[-1px] hover:outline-bulma/[0.12] resize-x"
      placeholder="Resize horizontally"
      rows={3}
    />
    <textarea
      className="appearance-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks outline outline-1 outline-offset-[-1px] outline-beerus transition-all focus:outline-2 focus:outline-offset-[-2px] focus:outline-piccolo hover:outline-1 hover:outline-offset-[-1px] hover:outline-bulma/[0.12] resize"
      placeholder="Resize vertically and horizontally"
      rows={3}
    />
  </div>
</div>
`;

exports[`Tag in RTL renders Deafult 1`] = `
<div
  dir="rtl"
>
  <textarea
    className="appearance-none resize-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks outline outline-1 outline-offset-[-1px] outline-beerus transition-all focus:outline-2 focus:outline-offset-[-2px] focus:outline-piccolo hover:outline-1 hover:outline-offset-[-1px] hover:outline-bulma/[0.12]"
  />
</div>
`;

exports[`Tag in RTL renders Disabled 1`] = `
<div
  dir="rtl"
>
  <textarea
    className="appearance-none resize-none w-full p-4 text-moon-16 text-bulma bg-gohan rounded-moon-s-sm placeholder:text-trunks outline outline-1 outline-offset-[-1px] outline-beerus transition-all focus:outline-2 focus:outline-offset-[-2px] focus:outline-piccolo hover:outline-1 hover:outline-offset-[-1px] hover:outline-bulma/[0.12] opacity-30 cursor-not-allowed"
    disabled={true}
    placeholder="Disabled"
  />
</div>
`;
